fixed background color on mobile navmenu

--- a/react-client/src/sass/styles.scss
+++ b/react-client/src/sass/styles.scss
@@ -1,3 +1,9 @@
+@media screen and (max-width: 1023px) {
+    .navbar-menu {
+        background-color: $orange;
+    }
+}
+
 html {
     background: url("../static/img/topography.png");
 }
